package firmament;

import "messages/base_message.proto";

extend BaseMessage {
  optional ObtainObjectMessage obtain_object_extn=111; 
  optional StorageDiscoverMessage storage_discover_message_extn =112 ; 
  optional StorageHeartBeatMessage storage_heartbeat_message_extn = 113; 
  optional ObjectInfoMessage object_info_message_extn = 114 ; 
}



message ObtainObjectMessage { 
    required uint64 object_id = 1 ;
    optional bytes data  = 2 ;  
    required uint64 size = 3 ; 
    required string sender_uuid = 4 ; 
    required string sender_uri = 5 ; // Check whether the two  actually needed
}


message StorageDiscoverMessage { 
    required string uuid = 1 ; 
    required string uri =  2 ; 
    required string storage_uri = 3 ; 
}

message StorageHeartBeatMessage { 
    required string uri = 1 ;
    required string uuid = 2; /* Is this redundant? */
    repeated ObjectInfoMessage object = 3 ;  
    
}

message ObjectInfoMessage { 
    required uint64 obj_name = 1 ; 
/* Should locations be resource ids or direct host:port (storage engine
listening interface)? */
    repeated string locations = 2 ; 
}


